Reuse launcher script in Docker container